May 22, 2008 - chris
o Log files now respect the file filters - i.e. if aes encryption is enabled,
	the log file is also encrypted

May 21, 2008 - chris
o Finalized the implementation of logging and recovery; can be enabled with
	HAM_ENABLE_RECOVERY

May 11, 2008 - chris
o Bugfix: when creating an in-memory environment with a NULL-pointer as 
    filename, this pointer was dereferenced, which resulted in a segmentation
    fault

May 10, 2008 - chris
o The flag HAM_DISABLE_FREELIST_FLUSH is now deprecated; freelist operations
    are no longer immediately flushed. 

May 10, 2008 - chris
o minor documentation fixes (mainly grammar releated) in ham/hamsterdb.h

May 09, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.2

May 06, 2008 - chris
o added new API function ham_get_flags()

May 06, 2008 - chris
o When creating an environment with ham_env_create_ex and a custom
    page size, the page size was not stored correctly
o An assert was sometimes triggered when closing a Database which was part
    of an Environment

Apr 25, 2008 - chris
o bugfix: when a cursor is overwritten (ham_cursor_overwrite), the modified
    page was never released from the cache

Mar 09, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.1

Feb 19, 2008 - chris
o added a macro HAM_CALLCONV to set the calling convention; per default, 
	it's empty and therefore CDECL is used

Feb 10, 2008 - chris
o added a new internal function ham_cursor_get_database

Jan 25, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.0

Jan 24, 2008 - chris
o added documentation fixes in the tutorial and the header files
o API change: added an additional parameter to the comparison-callback 
    functions

Jan 08, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.0rc1
